src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>MX_RTE_Fase__c</fullName>
        <label>Fase</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Backlog</fullName>
                    <default>true</default>
                    <label>Backlog</label>
                </value>
                <value>
                    <fullName>Backlog Portafolio</fullName>
                </value>
                <value>
                    <fullName>Portafolio</fullName>
                </value>
                <value>
                    <fullName>En Desarrollo</fullName>
                </value>
                <value>
                    <fullName>Valoración</fullName>
                </value>
                <value>
                    <fullName>Terminada</fullName>
                </value>
                <value>
                    <fullName>Deslizada</fullName>
                </value>
                <value>
                    <fullName>Descartada Backlog</fullName>
                </value>
                <value>
                    <fullName>Descartada por Áreas de Apoyo</fullName>
                </value>
                <value>
                    <fullName>Descartada Portafolio</fullName>
                </value>
                <value>
                    <fullName>Descartada por Presupuesto</fullName>
                </value>
                <value>
                    <fullName>Descartada Stake Holder</fullName>
                </value>
                <value>
                    <fullName>Descartada Product Owner</fullName>
                </value>
                <value>
                    <fullName>Aprobación Backlog</fullName>
                    <isActive>false</isActive>
                    <label>Aprobación Backlog</label>
                </value>
                <value>
                    <fullName>Aprobación Comité ARO</fullName>
                    <isActive>false</isActive>
                    <label>Aprobación Comité ARO</label>
                </value>
                <value>
                    <fullName>Aprobación Mesa de Especialistas</fullName>
                    <isActive>false</isActive>
                    <label>Aprobación Mesa de Especialistas</label>
                </value>
                <value>
                    <fullName>Aprobación Pentágono</fullName>
                    <isActive>false</isActive>
                    <label>Aprobación Pentágono</label>
                </value>
                <value>
                    <fullName>Aprobación Portafolio</fullName>
                    <isActive>false</isActive>
                    <label>Aprobación Portafolio</label>
                </value>
                <value>
                    <fullName>Aprobación RCI/Contraloría</fullName>
                    <isActive>false</isActive>
                    <label>Aprobación RCI/Contraloría</label>
                </value>
                <value>
                    <fullName>Descartada</fullName>
                    <isActive>false</isActive>
                    <label>Descartada</label>
                </value>
                <value>
                    <fullName>Pendiente de instalación</fullName>
                    <isActive>false</isActive>
                    <label>Pendiente de instalación</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_RTE_Fase_Backlog__c</fullName>
        <description>Campo que tiene el proposito de ser una subetapa del campo Estado del Caso</description>
        <label>Fase Backlog</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Backlog</fullName>
                    <default>true</default>
                    <label>Backlog</label>
                </value>
                <value>
                    <fullName>Enviar a Portafolio</fullName>
                </value>
                <value>
                    <fullName>Descartada Backlog</fullName>
                </value>
                <value>
                    <fullName>Descartada por Área de Apoyo</fullName>
                </value>
                <value>
                    <fullName>Backlog Portafolio</fullName>
                </value>
                <value>
                    <fullName>Aprobar</fullName>
                    <isActive>false</isActive>
                    <label>Aprobar</label>
                </value>
                <value>
                    <fullName>Rechazar</fullName>
                    <isActive>false</isActive>
                    <label>Rechazar</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_RTE_Fase_CCC__c</fullName>
        <description>Detalle de fase para el usuario de CCC</description>
        <label>Fase CCC</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sin impacto</fullName>
                </value>
                <value>
                    <fullName>En Proceso</fullName>
                </value>
                <value>
                    <fullName>Aprobado</fullName>
                </value>
                <value>
                    <fullName>Pendiente de aprobación</fullName>
                    <isActive>false</isActive>
                    <label>Pendiente de aprobación</label>
                </value>
                <value>
                    <fullName>Rechazado</fullName>
                    <isActive>false</isActive>
                    <label>Rechazado</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_RTE_Fase_Desarrollo_Tecnologico__c</fullName>
        <label>Fase Ready To Verify</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Terminado</fullName>
                </value>
                <value>
                    <fullName>Rechazado</fullName>
                </value>
                <value>
                    <fullName>Deslizado</fullName>
                </value>
                <value>
                    <fullName>Pendiente de Instalar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_RTE_Fase_IC__c</fullName>
        <description>Campo que detalla la fase de aprobación para el usuario de IC</description>
        <label>Fase Implementación Comercial</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sin impacto</fullName>
                </value>
                <value>
                    <fullName>En Proceso</fullName>
                </value>
                <value>
                    <fullName>Aprobado</fullName>
                </value>
                <value>
                    <fullName>Pendiente de aprobación</fullName>
                    <isActive>false</isActive>
                    <label>Pendiente de aprobación</label>
                </value>
                <value>
                    <fullName>Rechazado</fullName>
                    <isActive>false</isActive>
                    <label>Rechazado</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_RTE_Fase_Portafolio__c</fullName>
        <label>Fase Portafolio</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Validación Portafolio</fullName>
                </value>
                <value>
                    <fullName>Aprobado Portafolio</fullName>
                </value>
                <value>
                    <fullName>Descartado Portafolio</fullName>
                </value>
                <value>
                    <fullName>Confirmado</fullName>
                </value>
                <value>
                    <fullName>Sin Atención</fullName>
                </value>
                <value>
                    <fullName>Backlog</fullName>
                    <default>true</default>
                    <label>Backlog</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_RTE_Fase_RCI__c</fullName>
        <description>Campo que se actualiza simultanemaente al proceso de aprobación de Check list Módulos</description>
        <label>Fase RCA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sin impacto</fullName>
                </value>
                <value>
                    <fullName>En Proceso</fullName>
                </value>
                <value>
                    <fullName>Aprobado</fullName>
                </value>
                <value>
                    <fullName>Comité ARO</fullName>
                    <isActive>false</isActive>
                    <label>Comité ARO</label>
                </value>
                <value>
                    <fullName>Documentación</fullName>
                    <isActive>false</isActive>
                    <label>Documentación</label>
                </value>
                <value>
                    <fullName>Mesa de especialistas</fullName>
                    <isActive>false</isActive>
                    <label>Mesa de especialistas</label>
                </value>
                <value>
                    <fullName>RCI/Contraloría</fullName>
                    <isActive>false</isActive>
                    <label>RCI/Contraloría</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_RTE_Feature_de_Origen__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campo de busqueda en dónde se incluye el campo de origen de la feature actual</description>
        <label>Feature de Origen</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Features Relacionados</relationshipLabel>
        <relationshipName>MX_RTE_Features_Nuevos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Fecha_Estimada_de_Instalacion__c</fullName>
        <description>Campo para describir la fecha estimada de instalación a producción.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha Estimada de Cumplimiento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Iniciativa__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>No migrar</description>
        <label>Iniciativa</label>
        <referenceTo>MX_RTE_Iniciativa__c</referenceTo>
        <relationshipLabel>Features</relationshipLabel>
        <relationshipName>Casos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_RTE_ITS__c</fullName>
        <description>Campo en el que se registra # Its (Ext. e Int.)</description>
        <label>#ITS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Justificaci_n_de_deslizamiento__c</fullName>
        <description>Campo que se actualiza con el botón &quot;Deslizar feature&quot;</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Justificación de deslizamiento</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Motivo_de_Descarte__c</fullName>
        <description>Campo dependiente de Fase y Estado, con el objetivo de detallar quien fue el responsable de descartar un Feature</description>
        <label>Motivo de Descarte</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MX_RTE_Fase_Portafolio__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Backlog</fullName>
                </value>
                <value>
                    <fullName>Portafolio</fullName>
                </value>
                <value>
                    <fullName>Desarrollo</fullName>
                </value>
                <value>
                    <fullName>Presupuesto</fullName>
                </value>
                <value>
                    <fullName>Área de Apoyo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_RTE_MVP__c</fullName>
        <label>MVP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_RTE_No_Modulos_RCI_Asoc__c</fullName>
        <description>Campo que contabiliza todos los Check list asociados a una feature</description>
        <label>No. Modulos RCI Asociados</label>
        <summaryForeignKey>MX_RTE_Check_List_Modulo__c.MX_RTE_Feature__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Opex__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Campo que se necesita para capturar el OPEX inicial de cada Feature</description>
        <label>OPEX Solicitado</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MX_RTE_OPEX_Final__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Campo para registrar el OPEX Final necesario para crear una inciatiiva.</description>
        <label>OPEX Dotado</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MX_RTE_PI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Q en el que se desarrolla la feature.</description>
        <inlineHelpText>Q en el que se desarrolla la feature.</inlineHelpText>
        <label>Q</label>
        <referenceTo>MX_RTE_PI__c</referenceTo>
        <relationshipLabel>Features</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Pedidos_Pendientes_CCC__c</fullName>
        <description>Contabiliza todos los pedidos del tipo de registro CCC que aún no han sido aprobados</description>
        <formula>MX_RTE_Total_de_Pedidos_CCC__c -  MX_RTE_Pedidos_completados_CCC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pedidos Pendientes CCC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Pedidos_Pendientes_IC__c</fullName>
        <description>Contabiliza todos los pedidos del tipo de registro IC que aún no han sido aprobados</description>
        <formula>MX_RTE_Total_de_Pedidos_IC__c -  MX_RTE_Pedidos_completados_IC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pedidos Pendientes IC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Pedidos_Pendientes__c</fullName>
        <description>Contabiliza todos los pedidos del tipo de registro RCA que aún no han sido aprobados</description>
        <formula>MX_RTE_Total_de_Pedidos_RCI__c -  MX_RTE_Pedidos_completados_RCI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pedidos Pendientes RCA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Pedidos_completados_CCC__c</fullName>
        <description>Contabiliza todos los pedidos del tipo de registro CCC que ya fueron completados</description>
        <label>Pedidos completados CCC</label>
        <summaryFilterItems>
            <field>MX_RTE_Check_List_Modulo__c.MX_RTE_Organo_de_sanci_n__c</field>
            <operation>equals</operation>
            <value>Aprobado</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>MX_RTE_Check_List_Modulo__c.MX_RTE_Tipo_de_Registro_del_Pedido__c</field>
            <operation>equals</operation>
            <value>MX_RTE_CCC</value>
        </summaryFilterItems>
        <summaryForeignKey>MX_RTE_Check_List_Modulo__c.MX_RTE_Feature__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Pedidos_completados_IC__c</fullName>
        <description>Contabiliza todos los pedidos del tipo de registro IC que ya fueron completados</description>
        <label>Pedidos completados IC</label>
        <summaryFilterItems>
            <field>MX_RTE_Check_List_Modulo__c.MX_RTE_Organo_de_sanci_n__c</field>
            <operation>equals</operation>
            <value>Aprobado</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>MX_RTE_Check_List_Modulo__c.MX_RTE_Tipo_de_Registro_del_Pedido__c</field>
            <operation>equals</operation>
            <value>MX_RTE_IC</value>
        </summaryFilterItems>
        <summaryForeignKey>MX_RTE_Check_List_Modulo__c.MX_RTE_Feature__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Pedidos_completados_RCI__c</fullName>
        <description>Contabiliza todos los pedidos que ya fueron completados del tipo de registro RCA</description>
        <label>Pedidos completados RCA</label>
        <summaryFilterItems>
            <field>MX_RTE_Check_List_Modulo__c.MX_RTE_Organo_de_sanci_n__c</field>
            <operation>equals</operation>
            <value>Aprobado</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>MX_RTE_Check_List_Modulo__c.MX_RTE_Tipo_de_Registro_del_Pedido__c</field>
            <operation>equals</operation>
            <value>MX_RTE_RCI</value>
        </summaryFilterItems>
        <summaryForeignKey>MX_RTE_Check_List_Modulo__c.MX_RTE_Feature__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MX_RTE_PI_Siguiente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campo que guardara el Q en caso de que un feature se deslice</description>
        <inlineHelpText>Indica el Q del que proviene esta Feature</inlineHelpText>
        <label>Q Siguiente</label>
        <referenceTo>MX_RTE_PI__c</referenceTo>
        <relationshipLabel>Casos (Q Siguiente)</relationshipLabel>
        <relationshipName>Casos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Ponderaci_n__c</fullName>
        <description>Ponderación concatenada de la iniciativa, el caso y el porcentaje.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Ponderación</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MX_RTE_Ponderacion__c</fullName>
        <description>No migrar</description>
        <label>Ponderación Stake Holder</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Prioridad_para_equipo__c</fullName>
        <label>Prioridad para el equipo</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
     <fields>
        <fullName>MX_RTE_Producto__c</fullName>
        <description>Campo para agregar a nivel feature el producto.</description>
        <label>Productos</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HIPOTECARIO</fullName>
                </value>
                <value>
                    <fullName>INVERSIONES</fullName>
                </value>
                <value>
                    <fullName>TDC</fullName>
                </value>
                <value>
                    <fullName>VISTA</fullName>
                </value>
                <value>
                    <fullName>CONSUMO</fullName>
                </value>
                <value>
                    <fullName>AUTO</fullName>
                </value>
                <value>
                    <fullName>NOMINA</fullName>
                </value>
                <value>
                    <fullName>SEGUROS</fullName>
                </value>
                <value>
                    <fullName>APPS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_RTE_Programa__c</fullName>
        <formula>MX_RTE_Iniciativa__r.MX_RTE_Programa_Global__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Programa</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Proviene_de_Fetaure_deslizada__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo de checkbox que determina si la feature actual proviene de una feature deslizada.</description>
        <label>Proviene de Fetaure deslizada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Puede_Presentar_en_Demo_Day__c</fullName>
        <description>Formula para determinar si un feature es apto para presentarse en Demo Day</description>
        <formula>IF
                (
                  (RecordType.DeveloperName = &apos;MX_RTE_Features&apos;) &amp;&amp;
                   ISPICKVAL( MX_RTE_MVP__c, &apos;Sí&apos; ) &amp;&amp;
                  (ISPICKVAL( MX_RTE_Alcance_Final__c, &apos;Producción(PCCION)&apos; ) &amp;&amp; ( IsClosed =TRUE)),
                   TRUE,
                   FALSE
                )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Puede presentar en Demo Day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Ranking_Banco__c</fullName>
        <label>Ranking Banco</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Ranking_BBVA_FX__c</fullName>
        <formula>MX_RTE_Iniciativa__r.MX_RTE_Ranking_BBVA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ranking BBVA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Requiere_RCI__c</fullName>
        <label>¿Requiere RCI?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SI</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_RTE_Resumen_Ponderacion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Porcentaje de Ponderación de Freatures relacionadas a la Iniciativa y PI</description>
        <inlineHelpText>Ingresa la descripción de tu MVP, da click en el botón de buscar(lupa) y selecciona el folio correspondiente.</inlineHelpText>
        <label>MVP</label>
        <referenceTo>MX_RTE_Resumen_Ponderacion__c</referenceTo>
        <relationshipLabel>Features</relationshipLabel>
        <relationshipName>Casos</relationshipName>
        <type>Lookup</type>
    </fields>
       <fields>
<fullName>MX_RTE_Tipo_de_KPIs__c</fullName>
        <description>Campo para describir el tipo de KPI&apos;s utilizados.</description>
        <label>Tipo de KPIs</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BORRAR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_RTE_Sprint_Esperado__c</fullName>
        <description>No migrar</description>
        <label>Sprint Esperado</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>S1</fullName>
                </value>
                <value>
                    <fullName>S2</fullName>
                </value>
                <value>
                    <fullName>S3</fullName>
                </value>
                <value>
                    <fullName>S4</fullName>
                </value>
                <value>
                    <fullName>S5</fullName>
                </value>
                <value>
                    <fullName>S6</fullName>
                </value>
                <value>
                    <fullName>S7</fullName>
                </value>
                <value>
                    <fullName>S8</fullName>
                </value>
                <value>
                    <fullName>S9</fullName>
                </value>
                <value>
                    <fullName>S10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_RTE_Tipo__c</fullName>
        <description>Campo para seleccionar el tipo de feature a crear/modficar.</description>
        <label>Alcance del Q</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Otro</fullName>
                </value>
                <value>
                    <fullName>Desarrollo</fullName>
                </value>
                <value>
                    <fullName>Test</fullName>
                </value>
                <value>
                    <fullName>Liga Oculta</fullName>
                </value>
                <value>
                    <fullName>F&amp;F</fullName>
                </value>
                <value>
                    <fullName>Producción</fullName>
                </value>
                <value>
                    <fullName>BackEnd</fullName>
                </value>
                <value>
                    <fullName>Diseño</fullName>
                </value>
                <value>
                    <fullName>Actividad</fullName>
                </value>
                <value>
                    <fullName>Servicio</fullName>
                </value>
                <value>
                    <fullName>Cliente</fullName>
                    <isActive>false</isActive>
                    <label>Cliente</label>
                </value>
                <value>
                    <fullName>Deuda Técnica</fullName>
                    <isActive>false</isActive>
                    <label>Deuda Técnica</label>
                </value>
                <value>
                    <fullName>Herramienta de red</fullName>
                    <isActive>false</isActive>
                    <label>Herramienta de red</label>
                </value>
                <value>
                    <fullName>Infraestructura</fullName>
                    <isActive>false</isActive>
                    <label>Infraestructura</label>
                </value>
                <value>
                    <fullName>Producto digital</fullName>
                    <isActive>false</isActive>
                    <label>Producto digital</label>
                </value>
                <value>
                    <fullName>Sucursal</fullName>
                    <isActive>false</isActive>
                    <label>Sucursal</label>
                </value>
                <value>
                    <fullName>Todos</fullName>
                    <isActive>false</isActive>
                    <label>Todos</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_RTE_Total_de_Pedidos_CCC__c</fullName>
        <description>Contabiliza todos los pedidos del tipo de registro CCC que tiene asociados la Feature</description>
        <label>Total de Pedidos CCC</label>
        <summaryFilterItems>
            <field>MX_RTE_Check_List_Modulo__c.MX_RTE_Tipo_de_Registro_del_Pedido__c</field>
            <operation>equals</operation>
            <value>MX_RTE_CCC</value>
        </summaryFilterItems>
        <summaryForeignKey>MX_RTE_Check_List_Modulo__c.MX_RTE_Feature__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Total_de_Pedidos_IC__c</fullName>
        <description>Contabiliza todos los pedidos del tipo de registro IC que tiene asociados la Feature</description>
        <label>Total de Pedidos IC</label>
        <summaryFilterItems>
            <field>MX_RTE_Check_List_Modulo__c.MX_RTE_Tipo_de_Registro_del_Pedido__c</field>
            <operation>equals</operation>
            <value>MX_RTE_IC</value>
        </summaryFilterItems>
        <summaryForeignKey>MX_RTE_Check_List_Modulo__c.MX_RTE_Feature__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Total_de_Pedidos_RCI__c</fullName>
        <description>Contabiliza todos los pedidos del tipo de registro RCA que tiene asociados la Feature</description>
        <label>Total de Pedidos RCA</label>
        <summaryFilterItems>
            <field>MX_RTE_Check_List_Modulo__c.MX_RTE_Tipo_de_Registro_del_Pedido__c</field>
            <operation>equals</operation>
            <value>MX_RTE_RCI</value>
        </summaryFilterItems>
        <summaryForeignKey>MX_RTE_Check_List_Modulo__c.MX_RTE_Feature__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_AMaternoConductor__c</fullName>
        <description>Apellido Materno del Conductor</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Apellido Materno Conductor</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_APaternoConductor__c</fullName>
        <description>Apellido Paterno del Conductor</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Apellido Paterno Conductor</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_Address__c</fullName>
        <description>Dirección del siniestro</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Dirección</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_Area__c</fullName>
        <description>Parametro Área de Claim Center usado de Tarea de Datos</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Área</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC_SB_SAC_Departamento__c</fullName>
        <description>Campo que mostrara la información del departamento (célula/servicio) del propietario del registro</description>
        <formula>IF( Owner:Queue.QueueName = &quot;Cola de correo electrónico&quot;,
&quot;En espera de asignacion&quot;,    CreatedBy.Department  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Departamento</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_BranchKey__c</fullName>
        <description>Parámetro de clasificiación de Claim Center usado en Tarea de Datos</description>
        <encryptionScheme>None</encryptionScheme>
        <label>MX SB MLT BranchKey</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_BranchName__c</fullName>
        <description>Parametro de clasificiación de Claim Center</description>
        <encryptionScheme>None</encryptionScheme>
        <label>MX SB MLT BranchName</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_Bsq_Cert__c</fullName>
        <description>Certificado / Cláusula / Inciso de Póliza para búsqueda</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Certificado / Cláusula / Inciso de Póliza para búsqueda</inlineHelpText>
        <label>Certificado / Inciso</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_Bsq_Nombre__c</fullName>
        <description>Nombre de Asegurado para buscar póliza</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Nombre de Asegurado para buscar póliza</inlineHelpText>
        <label>Nombre Asegurado</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_Bsq_Num_Serie__c</fullName>
        <description>Número de Serie de auto a buscar la póliza</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Número de Serie de auto a buscar la póliza</inlineHelpText>
        <label>Número Serie</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_MLT_Bsq_Placas__c</fullName>
        <description>Placas del auto cuya póliza se desea buscar</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Placas del auto cuya póliza se desea buscar</inlineHelpText>
        <label>Placas</label>
        <length>12</length>
        <type>Text</type>
    </fields>
</CustomObject>